<resources>
    <string name="app_name">FoodLocker</string>
    <string name="logo_desc">The FoodLocker logo</string>
    <string name="welcome_msg">Welcome to FoodLocker! We are a free food delivery service that works
        inside your high school. To get started, please select your high school</string>
    <string name="next_nav">Next</string>

    <string name="login_msg">Please enter your username and password</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_nav">Login</string>
    <string name="no_account_msg">Don\'t have an account already? Sign up here</string>

    <string name="user_type_select">Select your account type</string>
    <string name="user_option">User</string>
    <string name="volunteer_option">Volunteer</string>
    <string name="create_act_msg">Please create a username and password</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="create_act_btn">Create Account</string>

    <string name="create_act_duplicate_err">Username already exists</string>
    <string name="create_act_no_role">Please specify whether you are a user or volunteer</string>
    <string name="create_act_no_user">Please specify a username</string>
    <string name="create_act_no_pass">Please specify a password</string>
    <string name="create_act_no_match">The confirmed password does not match</string>

    <string name="login_no_entry">Please enter both your username and password</string>
    <string name="login_no_match">The entered credentials are incorrect</string>

    <string name="welcome">Welcome to food locker!</string>
    <string name="welcome_desc">A description</string>
    <string name="welcome_faq">Have any questions? Check out our FAQ</string>
    <string name="order_now_btn">Order Now</string>

    <string name="diet_rest_title">Dietary Restrictions:</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="dairy">Dairy Free</string>
    <string name="gluten">Gluten Free</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="no_stock_msg">This box is currently out of stock</string>

    <string name="order_info_header">Here is the information on your order:</string>
    <string name="order_info_box">Box: %s</string>
    <string name="order_info_locker_num">Locker number: %s</string>
    <string name="order_info_combo">Lock combo: %s</string>
    <string name="order_info_diet">Dietary restrictions: %s</string>
    <string name="order_info_plastic_bag">Your food comes in a reusable bag! If you\'ll use it again, feel free to keep it. Otherwise return it to the locker when you are done</string>
    <string name="order_info_thanks">Thank you for your order. We will get back to you shortly with a time to pick up your food box</string>

    <string name="volun_welcome_desc">Welcome! As a Food Locker volunteer, you have two main roles:</string>
    <string name="edit_inv_btn">Edit inventory</string>
    <string name="check_orders_btn">Check orders</string>
    <string name="volun_welcome_desc_cont">You can also do other things like:</string>
    <string name="volun_hours_btn">View volunteer hours</string>
    <string name="edit_combo_btn">Edit lock combos</string>

    <string name="order_list_time">%d min ago</string>
    <string name="order_list_accept">Accept Order</string>

    <string name="loading">Loading&#8230;</string>

    <string name="set_delivery_time">Please set a delivery time</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="set_delivery_time_confirm">Set delivery time</string>

    <string-array name="highschool_list">
        <item>Lisgar Collegiate Institute</item>
        <item>Unknown</item>
    </string-array>
</resources>
