<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/login_msg"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/login_msg"/>

    <EditText
        android:id="@+id/username_in"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/password_in"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_in"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <Button
        android:id="@+id/login_btn"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_below="@id/password_in"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_nav"/>

    <TextView
        android:id="@+id/no_account_msg"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_btn"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/no_account_msg"/>

</RelativeLayout>