<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/user_type_sel_msg"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="17sp"
        android:text="@string/user_type_select"/>

    <RelativeLayout
        android:id="@+id/user_type_btn_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/user_type_sel_msg"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/user_btn"
            android:background="@drawable/foodlocker_button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/white"
            android:text="@string/user_option"/>
        <Button
            android:id="@+id/volunteer_btn"
            android:background="@drawable/foodlocker_button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@id/user_btn"
            android:layout_toRightOf="@id/user_btn"
            android:textColor="@android:color/white"
            android:text="@string/volunteer_option"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/create_act_msg"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/user_type_btn_wrapper"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="17sp"
        android:text="@string/create_act_msg"/>

    <EditText
        android:id="@+id/new_username_in"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_act_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/new_password_in"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_username_in"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <EditText
        android:id="@+id/confirm_pass_in"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_password_in"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <Button
        android:id="@+id/create_act_btn"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/confirm_pass_in"
        android:layout_marginTop="10dp"
        android:background="@drawable/foodlocker_button"
        android:textColor="@android:color/white"
        android:text="@string/create_act_btn"/>

    <TextView
        android:id="@+id/create_act_err_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/create_act_btn"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@android:color/holo_red_dark"/>

</RelativeLayout>