<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderInformation">

    <TextView
        android:id="@+id/order_info_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/order_info_header"/>

    <TextView
        android:id="@+id/order_info_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/order_info_header"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/order_info_locker_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_info_box"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/order_info_combo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_info_locker_number"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/order_info_diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_info_combo"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/order_info_plastic_bag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_info_diet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/order_info_plastic_bag"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/order_info_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_info_plastic_bag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/order_info_thanks"
        android:textSize="20sp"/>

</RelativeLayout>