<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryTimeSetPage">

    <TextView
        android:id="@+id/set_delivery_time_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/set_delivery_time"/>

    <RelativeLayout
        android:id="@+id/time_set_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/set_delivery_time_msg"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/plus_button_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/plus_button_1"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@drawable/foodlocker_button"
                android:textColor="@android:color/white"
                android:text="@string/plus"/>
            <Button
                android:id="@+id/plus_button_2"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_toRightOf="@+id/plus_button_1"
                android:layout_toEndOf="@+id/plus_button_1"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/foodlocker_button"
                android:textColor="@android:color/white"
                android:text="@string/plus"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/plus_button_wrapper"
            android:text="7"
            android:textSize="50sp"/>
        <TextView
            android:id="@+id/colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/hour"
            android:layout_toEndOf="@id/hour"
            android:layout_below="@id/plus_button_wrapper"
            android:text=":"
            android:textSize="50sp"/>
        <TextView
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/colon"
            android:layout_toEndOf="@id/colon"
            android:layout_below="@id/plus_button_wrapper"
            android:text="00"
            android:textSize="50sp"/>

        <RelativeLayout
            android:id="@+id/minus_button_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/hour">

            <Button
                android:id="@+id/minus_button_1"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@drawable/foodlocker_button"
                android:textColor="@android:color/white"
                android:text="@string/minus"/>
            <Button
                android:id="@+id/minus_button_2"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_toRightOf="@+id/minus_button_1"
                android:layout_toEndOf="@+id/minus_button_1"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/foodlocker_button"
                android:textColor="@android:color/white"
                android:text="@string/minus"/>

        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/set_delivery_time_btn"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_below="@id/time_set_wrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/foodlocker_button"
        android:textColor="@android:color/white"
        android:text="@string/set_delivery_time_confirm"/>

</RelativeLayout>